--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "goodplatesbackend",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc && node ./dist/server.js",
+    "dev": "tsc && nodemon --ext ts --watch './src/**/*.ts' ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +14,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
+    "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
   },
   "dependencies": {
